# shopify_api_py

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  LICENSE  mypy.ini  pyproject.toml  tbump.toml
.github/workflows/: ci.yml
shopify_api/: __init__.py  exceptions.py  locations.py  orders.py  products.py  request.py  session.py
shopify_api_py/: __init__.py  exceptions.py  fulfillment.py  images.py  locations.py  orders.py  products.py  request.py  session.py
stubs/pyactiveresource/: activeresource.pyi  collection.pyi  connection.pyi
stubs/shopify/: __init__.pyi  base.pyi  collection.pyi  mixins.py  mixins.pyi  session.pyi
stubs/shopify/resources/: __init__.pyi  collect.pyi  custom_collection.pyi  fulfillment.py  fulfillment.pyi  image.pyi  inventory_item.pyi  inventory_level.pyi  location.pyi  option.pyi  order.pyi  product.pyi  smart_collection.pyi  variant.pyi
tests/: __init__.py  test_fulfillment.py  test_images.py  test_locations.py  test_orders.py  test_products.py  test_request.py  test_session.py
